--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,6 +9,15 @@
 	position: relative;
 }
 
+.header_container h5 {
+	font-size: 1.7rem;
+}
+
+.header_container h2 {
+	font-size: 2.2rem;
+	margin-bottom: 0.7rem;
+}
+
 .cta {
 	display: flex;
 	gap: 1rem;
@@ -24,6 +33,10 @@
 	position: absolute;
 	left: 0;
 	bottom: 3rem;
+}
+
+.header_socials .icon {
+	font-size: 1.5rem;
 }
 
 .header_socials::after {
