--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -151,22 +151,28 @@ span {
 .skills-column:nth-child(2) .skills-content .progress:nth-child(2) .bar span {
 	width: 70%;
 }
-
 .skills-column:nth-child(2) .skills-content .progress:nth-child(3) .bar span {
 	width: 80%;
 }
-
 .skills-column:nth-child(2) .skills-content .progress:nth-child(4) .bar span {
-	width: 85%;
+	width: 70%;
 }
-
 .skills-column:nth-child(2) .skills-content .progress:nth-child(5) .bar span {
-	width: 80%;
+	width: 60%;
 }
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(6) .bar span {
-	width: 50%;
+	width: 80%;
 }
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(7) .bar span {
+	width: 85%;
+}
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(8) .bar span {
+	width: 70%;
+}
+
 
 @media (max-width: 768px) {
 	.skills .skills-row {
